crates/compiler/test_syntax/tests/snapshots/pass/provides_type.header.roc
app "test"
    packages { pf: platform "./platform" }
    provides [ quicksort ] { Flags, Model, } to pf
