crates/compiler/test_syntax/tests/snapshots/fail/imports_missing_comma.header.roc
app "test-missing-comma"
    packages { pf: "platform/main.roc" }
    provides [main, @Foo] to pf
